# komaru-the-game-C

./: .gitignore  CMakeLists.txt  LICENSE
include/: about.h  raygui.h
scripts/: build.sh  build_and_run.sh  rebuild_and_run.sh
src/: about.c  main.c
